deployment/overlays/plane/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plane
  namespace: plane-ce
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plane.hauptspeicher.com`) && PathPrefix(`/api`)
      kind: Rule
      priority: 30
      middlewares:
        - name: plane-upload-limit
      services:
        - name: plane-app-api
          port: 8000
    - match: Host(`plane.hauptspeicher.com`) && PathPrefix(`/auth`)
      kind: Rule
      priority: 30
      middlewares:
        - name: plane-upload-limit
      services:
        - name: plane-app-api
          port: 8000
    - match: Host(`plane.hauptspeicher.com`) && PathPrefix(`/uploads`)
      kind: Rule
      priority: 30
      middlewares:
        - name: plane-upload-limit
      services:
        - name: plane-app-minio
          port: 9000
    - match: Host(`plane.hauptspeicher.com`) && PathPrefix(`/live`)
      kind: Rule
      priority: 30
      middlewares:
        - name: plane-upload-limit
      services:
        - name: plane-app-live
          port: 3000
    - match: Host(`plane.hauptspeicher.com`) && PathPrefix(`/spaces`)
      kind: Rule
      priority: 30
      middlewares:
        - name: plane-upload-limit
      services:
        - name: plane-app-space
          port: 3000
    - match: Host(`plane.hauptspeicher.com`) && PathPrefix(`/god-mode`)
      kind: Rule
      priority: 30
      middlewares:
        - name: plane-upload-limit
      services:
        - name: plane-app-admin
          port: 3000
    - match: Host(`plane.hauptspeicher.com`)
      kind: Rule
      priority: 10
      middlewares:
        - name: plane-upload-limit
      services:
        - name: plane-app-web
          port: 3000
  tls:
    certResolver: myresolver
